# MinesweeperQtSDL

./: .gitignore  CMakeLists.txt  debugCompile.sh  releaseCompile.sh
include/: GameMainWindow.hpp  MinesweeperWidget.hpp  SDLWidget.hpp
src/: GameMainWindow.cpp  MinesweeperWidget.cpp  SDLWidget.cpp  main.cpp
